add: переход на экран для конвертации валюты.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Currency</string>
+    <string name="action_convert">Конвертировать</string>
+    <string name="edit_sum">Введите сумму</string>
 </resources>
