feat: добавлен график

--- a/currencies_screen_impl/src/main/res/values/strings.xml
+++ b/currencies_screen_impl/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="convert">Конвертация</string>
+
+    <string name="emptyChartText">Данные отсутствуют</string>
 </resources>
