add: визулизация добавления в избранное

--- a/currencies_screen_impl/src/main/res/values/strings.xml
+++ b/currencies_screen_impl/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="convert">Конвертация</string>
 
     <string name="emptyChartText">Данные отсутствуют</string>
+
+    <string name="graph">График</string>
 </resources>
